// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SingleReport /> should render SingleReport 1`] = `
<div>
  <div>
    <div>
      <div>
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon="check-circle"
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          title=""
          transform={null}
        />
        <h4>
          Title: 
        </h4>
      </div>
      <p>
        dhjfd
      </p>
    </div>
    <div>
      <div>
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon="check-circle"
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          title=""
          transform={null}
        />
        <h4>
          Type: 
        </h4>
      </div>
      <p>
        red-flag
      </p>
    </div>
    <div>
      <div>
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon="check-circle"
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          title=""
          transform={null}
        />
        <h4>
          Date: 
        </h4>
      </div>
      <p
        id="incident-date"
      >
        Invalid date
      </p>
    </div>
    <div>
      <div>
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon="check-circle"
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          title=""
          transform={null}
        />
        <h4>
          Status: 
        </h4>
      </div>
      <p>
        draft
      </p>
    </div>
    <div>
      <div>
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon="check-circle"
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          title=""
          transform={null}
        />
        <h4>
          Location: 
        </h4>
      </div>
      <p>
        sdjnkjs
      </p>
    </div>
    <div>
      <div>
        <button
          id="view_btn"
          onClick={[Function]}
        >
          Details
        </button>
        <button
          id="edit_btn"
          onClick={[Function]}
        >
          Edit
        </button>
        <button
          id="delete_btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SingleReport /> should render a different content when route is Admin 1`] = `
<div>
  <div>
    <div>
      <div>
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon="check-circle"
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          title=""
          transform={null}
        />
        <h4>
          Title: 
        </h4>
      </div>
      <p>
        dhjfd
      </p>
    </div>
    <div>
      <div>
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon="check-circle"
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          title=""
          transform={null}
        />
        <h4>
          Type: 
        </h4>
      </div>
      <p>
        red-flag
      </p>
    </div>
    <div>
      <div>
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon="check-circle"
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          title=""
          transform={null}
        />
        <h4>
          Date: 
        </h4>
      </div>
      <p
        id="incident-date"
      >
        Invalid date
      </p>
    </div>
    <div>
      <div>
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon="check-circle"
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          title=""
          transform={null}
        />
        <h4>
          Status: 
        </h4>
      </div>
      <p>
        draft
      </p>
    </div>
    <div>
      <div>
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon="check-circle"
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          title=""
          transform={null}
        />
        <h4>
          Location: 
        </h4>
      </div>
      <p>
        sdjnkjs
      </p>
    </div>
    <div>
      <div>
        <button
          id="view_btn"
          onClick={[Function]}
        >
          Details
        </button>
        <button
          id="edit_btn"
          onClick={[Function]}
        >
          Edit
        </button>
      </div>
    </div>
  </div>
</div>
`;
